--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "scripts": {
     "build": "eleventy",
+    "clean": "rm -rf www",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
